# Lynx

./: .gitignore  README.md  design_doc.md  docker-compose.yml  launch_db.ps1
backend/: .gitignore  Dockerfile  api.py  clean_db.py  news_api.py  pyproject.toml
docs/: design_doc.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/app/: app.css  root.tsx  routes.ts
frontend/app/components/Graph/: Graph.css  Graph.tsx
frontend/app/components/RelationalCard/: RelationalCard.css  RelationalCard.tsx
frontend/app/contexts/: CardsHistoryContext.tsx
frontend/app/historypage/: historypage.css  historypage.tsx
frontend/app/homepage/: homepage.css  homepage.tsx
frontend/app/layout/: layout.css  layout.tsx
frontend/app/routes/: history.tsx  home.tsx
frontend/app/welcome/: welcome.tsx
ml/: Dockerfile  README.md  pyproject.toml
ml/api/: main.py
ml/code-app/api/: main.py
ml/code_app/api/: main.py
ml/datasets/process/: test.parquet
ml/datasets/processed/: RE_dataset.txt
ml/datasets/raw/: expanded_dataset.csv  russian_finance_politics_news.csv  train-00000-of-00001-d16079d82b6163a9.parquet
ml/models/all-MiniLM-L6-v2/: config_sentence_transformers.json
ml/notebooks/: EDA.ipynb  NER.ipynb  RE.ipynb  news.ipynb  train_re_bert.ipynb
ml/vector_db/: init_qdrant.py  modem.py
