[project]
name = "ml"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "en-core-web-sm",
    "fastapi>=0.117.1",
    "natasha>=1.6.0",
    "spacy>=3.8.7",
    "uvicorn>=0.36.0",
    "transformers",
    "torch>=2.7.0"
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
torch = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true